--- a/UEMKA/index.html
+++ b/UEMKA/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Uemka Photo">
-    <meta name="description" content="uemka photo, photo product, product photography services, foto produk, jasa foto produk, jasa foto produk umkm, umkm">
-    <meta name="keywords" content="uemka photo, photo product, product photography services, foto produk, jasa foto produk, jasa foto produk umkm, umkm">
+    <meta name="description" content="uemka photo">
+    <meta name="keywords" content="uemka photo">
     <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
