--- a/UEMKA/index.html
+++ b/UEMKA/index.html
@@ -2,10 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Uemka Photo">
-    <meta name="description" content="uemka photo">
-    <meta name="keywords" content="uemka photo">
-    <meta name="robots" content="noindex, nofollow">
+    <title>Jasa Foto Produk Profesional - Uemka</title>
+    <meta name="description" content="Dapatkan foto produk berkualitas tinggi yang menarik dan meningkatkan penjualan Anda dengan jasa foto produk profesional dari Uemka. Kami berpengalaman dalam memotret berbagai jenis produk untuk berbagai industri.">
+    <meta name="keywords" content="jasa foto produk, foto produk profesional, foto produk berkualitas tinggi, foto produk untuk eCommerce, foto produk makanan, foto produk fashion, foto produk elektronik, foto produk furniture, foto produk kecantikan, foto produk UMKM">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <title>Uemka Photo</title>
